Trivial - formatting and suppression of warnings.